# Master-Thesis-Simulation

./: CMakeLists.txt  README.md  package.xml
config/: joints.yaml  npc.yaml  pid_params.yaml
launch/: braking.launch  control.launch  debug_lidar.launch  dynamic_obstacles.launch  dynamic_obstacles_baseline.launch  ego_vehicle.launch  gazebo.launch  gazebo_experiment.launch  npc_spawn.launch  obstacles.launch  platoon.launch  rviz.launch  rviz_new.launch  simulation.launch  static_obstacle.launch  test_ns.launch  world.launch
models/: truck.sdf
models/truck/: model.config
msg/: TruckControl.msg
results/: snapshot_video.py
results/arrays/: ego_input_array.npy  ego_input_array_comparison_baseline.npy  ego_state_array.npy  ego_time_array.npy  ego_time_array_comparison_baseline.npy  ego_time_array_comparison_proposed.npy  follower_1_input_array.npy  follower_1_state_array.npy  follower_1_time_array.npy  follower_2_input_array.npy  follower_2_state_array.npy  follower_2_time_array.npy  follower_3_input_array.npy  follower_3_state_array.npy  follower_3_time_array.npy
rviz/: mybot.rviz
scripts/: npc_controller.py  obstacle_detection.py  scan.py  truck_controller_node.py
src/: debug_lidar.py  ego_vehicle.py  ego_vehicle_baseline.py  follower_vehicle.py
src/avoidance/: ekf.py  obstacle_extraction.py  test_lidar.py  utils.py
src/plot/: plot.py
urdf/: box.xacro  ego_vehicle.plugins.xacro  ego_vehicle.xacro  follower_vehicle.xacro  lidar.plugins.xacro  mybot.plugins.xacro  mybot.xacro  npc.urdf  npc.urdf.xacro  truck.urdf
worlds/: empty.world  highway.world
(+5 files in other folders)
